# project_rl

./: .gitignore  launch_as2.bash  launch_ground_station.bash
config/: config.yaml  uav_config_cvar_racing.yaml  world_swarm.yaml
config_ground_station/: rviz2_config.rviz
config_gz/: drone_cvar_racing.sdf  drone_cvar_racing.sdf.jinja
docker/isaac_ros_common/: README.md
docker/isaac_ros_common/compose/: .bash_completions  .bash_profile  compose.sh  docker-compose-aarch64.txt  docker-compose-x86_64.txt  usb-bulk-configuration-reference.zip.1
docker/isaac_ros_common/docker/: Dockerfile.aarch64.ros2_humble  Dockerfile.as2  Dockerfile.as2_no_build  Dockerfile.config_aarch64  Dockerfile.config_x86_64  Dockerfile.estimator  (+5 more)
rl/: curriculum_train.py  eval.py  rl_config.yaml  train.py
rl/callbacks/: __init__.py  physics_pause_callback.py  plateau_stopper.py
rl/config/: sim_viz.rviz
rl/env/: __init__.py  drone_goal_env.py  quadrace_adapter.py  quadrace_deploy_env.py  quadrace_sim_env.py  quadrace_vec_env.py  quadrace_vec_env_py.py  sim_params.py  subproc_swarm_vec_env.py  swarm_vec_env.py  track.py
rl/scripts/: check_deploy_dt.py  check_motor_map.py  check_quadrace_cpp_parity.py  check_quadrace_obs_parity.py  run_quadrace_policy.py  sim_rviz_bridge.py  smoke.py  test_camera_pointing.py  test_track.py  train_sim.py  validate_camera_live.py
sim/multirotor_pysim/: CMakeLists.txt  build.sh
sim/multirotor_pysim/src/: batch_sim.hpp  bindings.cpp  quad_race.hpp
tmuxinator/: aerostack2.yaml  ground_station.yaml
trees/: go.xml  go_back.xml  square.xml
utils/: rviz_select.bash
(+22 files in other folders)
